feat: Implement authentication service with Supabase integration
- Added AuthService for user registration, login, and session management.
- Integrated email confirmation check and user state management.
- Implemented logout functionality and email confirmation resend feature.

feat: Create breakpoint service for responsive design handling

- Added BreakpointService to manage and detect screen size breakpoints.
- Implemented convenience signals for mobile, tablet, and desktop states.
- Added utility methods for breakpoint comparisons.

feat: Develop database service for stock data management

- Created DatabaseService for CRUD operations on exchanges, categories, and companies.
- Implemented market data retrieval and saving functionality.
- Added methods for handling historical data and company comments.

feat: Introduce layout service for sidebar management

- Added LayoutService to manage sidebar state (collapsed/expanded).
- Implemented methods for toggling and setting sidebar state.

feat: Create stock service for stock data parsing and saving

- Developed StockService for parsing stock data from tables.
- Implemented methods for saving parsed data to the database.
- Added legacy support for backward compatibility with Supabase.

feat: Implement theme service for dark/light mode management

- Created ThemeService to manage application theme based on user preference.
- Integrated localStorage for theme persistence and system preference detection.

chore: Add SVG icons for UI components

- Added various SVG icons for login, registration, email, password, user, error, close, and loading states.
- Documented usage and parameters for SVG icons in README.

chore: Define database structure for stock application

- Created JSON schema for database tables including exchanges, categories, companies, and market data.

chore: Set up environment configuration for Supabase

- Added environment files for development and production with Supabase credentials.

chore: Configure T

--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "AuthAndAuth": {
+    "StocksPulse": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -18,9 +18,7 @@
           "builder": "@angular/build:application",
           "options": {
             "browser": "src/main.ts",
-            "polyfills": [
-              "zone.js"
-            ],
+            "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
@@ -29,9 +27,7 @@
                 "input": "public"
               }
             ],
-            "styles": [
-              "src/styles.scss"
-            ]
+            "styles": ["src/styles.scss"]
           },
           "configurations": {
             "production": {
@@ -52,7 +48,13 @@
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -61,10 +63,10 @@
           "builder": "@angular/build:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "AuthAndAuth:build:production"
+              "buildTarget": "StocksPulse:build:production"
             },
             "development": {
-              "buildTarget": "AuthAndAuth:build:development"
+              "buildTarget": "StocksPulse:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -75,10 +77,7 @@
         "test": {
           "builder": "@angular/build:karma",
           "options": {
-            "polyfills": [
-              "zone.js",
-              "zone.js/testing"
-            ],
+            "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
             "assets": [
@@ -87,12 +86,13 @@
                 "input": "public"
               }
             ],
-            "styles": [
-              "src/styles.scss"
-            ]
+            "styles": ["src/styles.scss"]
           }
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
