--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "prestart": "node set-env.js",
     "start": "ng serve",
-    "build": "ng build",
+    "prebuild:prod": "node set-env.js --prod",
+    "build": "npm run prebuild:prod && ng build --configuration production",
+    "build:dev": "node set-env.js && ng build --configuration development",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -43,6 +46,7 @@
     "@angular/compiler-cli": "^20.3.0",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.22",
+    "dotenv": "^17.2.3",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
